tests/neg/parser-stability-27.scala
class F extends (Int => 1)(
// error